# ktftd

./: .gitignore  CMakeLists.txt  bdy.cpp  bdy.hpp  datafiles.h  flc.cpp  flc.hpp  img.cpp  lbm.cpp  lbm.hpp  palette_image.cpp  palette_image.hpp  scr.cpp  scr.hpp  spk.cpp  spk.hpp  test.cpp
cmake/: FindGLESV2.cmake  FindSDL2.cmake
inc/: audio.hpp  flc.hpp  gfx.hpp  lbm.hpp  palette_image.hpp  scr.hpp  spk.hpp  vid.hpp  xcui.hpp
lib/: .CMakeLists.txt.swp  CMakeLists.txt  audio.cpp  bdy.cpp  flc.cpp  gfx.cpp  lbm.cpp  palette_image.cpp  scr.cpp  vid.cpp  xcui.cpp
src/: .ktftd.cpp.swp  es2_gfx.cpp  es2_gfx.hpp  ktftd.cpp  sdlaudio.cpp  sdlaudio.hpp
util/: CMakeLists.txt  flc.cpp  img.cpp  ktftdimg  snd.cpp  text.cpp  vid.cpp
